@@ -67,6 +67,10 @@ Changes
   pressure and garbage collection issues. GC log files are stored separately to
   the standard CrateDB logs and the files are log-rotated.
 
+- CrateDB will now by default create a heap dump in case of a crash caused by
+  an out of memory error. This makes it necessary to account for the additional
+  disk space requirements.
+
 - Added 'epoch' argument to the extract function which returns the number of
   seconds since Jan 1, 1970. For example:
   ``extract(epoch from '1970-01-01T00:00:01')`` returns ``1.0`` seconds.
